Added groups to the API
